[trunk] Add unittests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,9 @@ ENDIF (WIN32)
 # Find needed packages
 FIND_PACKAGE(LibXml2 REQUIRED)
 
+IF (CMAKE_VERSION GREATER 2.8.0 OR CMAKE_VERSION EQUAL 2.8.0)
+	OPTION(SC_GLOBAL_UNITTESTS "Enable unit tests" ON)
+ENDIF (CMAKE_VERSION GREATER 2.8.0 OR CMAKE_VERSION EQUAL 2.8.0)
 OPTION(SC_GLOBAL_PYTHON_WRAPPER "Create Python wrappers" ON)
 OPTION(SC_GLOBAL_PYTHON_WRAPPER_NUMPY "Add Numpy support for Python wrapper" OFF)
 
@@ -36,15 +39,12 @@ EXEC_PROGRAM(
 	OUTPUT_VARIABLE PYTHON_VERSION
 )
 
-IF (SC_GLOBAL_PYTHON_WRAPPER)
-	IF (APPLE)
-		FIND_PACKAGE(PythonLibsApple REQUIRED)
-	ELSE (APPLE)
-		FIND_PACKAGE(PythonLibs REQUIRED)
-	ENDIF (APPLE)
-	FIND_PACKAGE(PythonInterp REQUIRED)
-ENDIF (SC_GLOBAL_PYTHON_WRAPPER)
-
+IF (APPLE)
+	FIND_PACKAGE(PythonLibsApple REQUIRED)
+ELSE (APPLE)
+	FIND_PACKAGE(PythonLibs REQUIRED)
+ENDIF (APPLE)
+FIND_PACKAGE(PythonInterp REQUIRED)
 SET(PYTHON_LIBRARY_SUFFIX /python)
 SET(PYTHON_LIBRARY_PATH lib${PYTHON_LIBRARY_SUFFIX})
 
@@ -92,8 +92,6 @@ SET(SC3_PACKAGE_INCLUDE_DIR include)
 SET(SC3_PACKAGE_SHARE_DIR share)
 SET(SC3_PACKAGE_CONFIG_DIR etc)
 SET(SC3_PACKAGE_TEMPLATES_DIR templates)
-
-# SET(PROJECT_TEST_DATA_DIR ${CMAKE_SOURCE_DIR}/src/core/test/data)
 
 # Platform check
 #
@@ -157,7 +155,12 @@ ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 ADD_DEFINITIONS(-D_REENTRANT)
 
-# Enable ctest
-ENABLE_TESTING()
+IF(SC_GLOBAL_UNITTESTS)
+	MESSAGE(STATUS "Enable unit tests")
+	FIND_PACKAGE(Boost REQUIRED COMPONENTS unit_test_framework)
+	ENABLE_TESTING()
+ELSE(SC_GLOBAL_UNITTESTS)
+	MESSAGE(STATUS "Disable unit tests")
+ENDIF(SC_GLOBAL_UNITTESTS)
 
 SUBDIRS(src doc)
