[swig] Create seiscomp libraries in build dir for use prior to install

--- a/src/system/libs/swig/CMakeLists.txt
+++ b/src/system/libs/swig/CMakeLists.txt
@@ -5,6 +5,9 @@ SET(WRAPPER_MODULES config)
 
 SET(WRAPPER_MODULE_config_EXTRA_SC_LIBS config)
 
+SET(build_lib_python_seiscomp_dir ${CMAKE_BINARY_DIR}/lib/python/seiscomp)
+FILE(MAKE_DIRECTORY ${build_lib_python_seiscomp_dir})
+FILE(GENERATE OUTPUT ${build_lib_python_seiscomp_dir}/__init__.py CONTENT "")
 
 FOREACH (wrapper_module ${WRAPPER_MODULES})
         SET(
@@ -17,6 +20,15 @@ FOREACH (wrapper_module ${WRAPPER_MODULES})
         TARGET_LINK_LIBRARIES(_${wrapper_module} ${PYTHON_LIBRARIES})
         TARGET_LINK_LIBRARIES(_${wrapper_module} ${WRAPPER_MODULE_${wrapper_module}_EXTRA_LIBS})
         SC_LINK_LIBRARIES_INTERNAL(_${wrapper_module} ${WRAPPER_MODULE_${wrapper_module}_EXTRA_SC_LIBS})
+
+        ADD_CUSTOM_TARGET(link_build_lib_python_seiscomp_${wrapper_module} ALL
+                COMMAND ${CMAKE_COMMAND} -E create_symlink
+                        ${CMAKE_CURRENT_SOURCE_DIR}/${wrapper_module}.py
+                        ${build_lib_python_seiscomp_dir}/${wrapper_module}.py
+                COMMAND ${CMAKE_COMMAND} -E create_symlink
+                        ${CMAKE_BINARY_DIR}/lib/_${wrapper_module}.so
+                        ${build_lib_python_seiscomp_dir}/_${wrapper_module}.so
+        )
 ENDFOREACH (wrapper_module)
 
 SC_SWIG_GET_MODULE_PATH(_module_path)
