Install seiscomp3 include symlink

--- a/src/system/libs/CMakeLists.txt
+++ b/src/system/libs/CMakeLists.txt
@@ -3,3 +3,5 @@ SUBDIRS(3rd-party seiscomp python)
 IF (SC_GLOBAL_PYTHON_WRAPPER)
 	SUBDIRS(swig)
 ENDIF (SC_GLOBAL_PYTHON_WRAPPER)
+
+INSTALL(DIRECTORY seiscomp3 DESTINATION ${SC3_PACKAGE_INCLUDE_DIR})
