[cmake] Add option SC_GLOBAL_PYTHON_WRAPPER_PYTHON3 to force Python3 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,14 @@ FIND_PACKAGE(LibXml2 REQUIRED)
 OPTION(SC_GLOBAL_UNITTESTS "Enable unit tests" ON)
 OPTION(SC_GLOBAL_PYTHON_WRAPPER "Create Python wrappers" ON)
 OPTION(SC_GLOBAL_PYTHON_WRAPPER_NUMPY "Add Numpy support for Python wrapper" ON)
+OPTION(SC_GLOBAL_PYTHON_WRAPPER_PYTHON3 "Require Python3 interpreter" OFF)
 OPTION(SC_ENABLE_CONTRIB "Enables descending into the contrib directory" ON)
+
+IF(SC_GLOBAL_PYTHON_WRAPPER_PYTHON3)
+	SET(PythonInterp_FIND_VERSION 3)
+	SET(PythonInterp_FIND_VERSION_MAJOR 3)
+	SET(PythonInterp_FIND_VERSION_EXACT 0)
+ENDIF()
 
 FIND_PACKAGE(PythonInterp)
 EXEC_PROGRAM(
