--- a/src/system/CMakeLists.txt
+++ b/src/system/CMakeLists.txt
@@ -1,4 +1,5 @@
 SC_BEGIN_PACKAGE(SYSTEM)
+SC_ADD_CHANGELOG(seiscomp ${CMAKE_SOURCE_DIR})
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)
