[doc] Update documentation

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -40,6 +40,6 @@ IF (SC_DOC_GENERATE)
 	ENDIF()
 
 	IF (SC_DOC_GENERATE_PDF)
-		INSTALL(FILES ${DOC_BUILD_DIR}/pdf/SeisComP.pdf DESTINATION ${SC3_PACKAGE_SHARE_DIR}/doc/seiscomp)
+		INSTALL(FILES ${DOC_BUILD_DIR}/pdf/latex/SeisComP.pdf DESTINATION ${SC3_PACKAGE_SHARE_DIR}/doc/seiscomp)
 	ENDIF()
 ENDIF (SC_DOC_GENERATE)
