[system] Add fmtlib and include object code into libseiscomp_config

--- a/src/system/libs/3rd-party/CMakeLists.txt
+++ b/src/system/libs/3rd-party/CMakeLists.txt
@@ -1,3 +1,8 @@
 IF (SC_SYSTEM_OWN_MSEED)
 	SUBDIRS(libmseed)
 ENDIF (SC_SYSTEM_OWN_MSEED)
+
+INSTALL(
+	DIRECTORY fmt/include/fmt
+	DESTINATION ${SC3_PACKAGE_INCLUDE_DIR}
+)
