--- a/src/system/libs/seiscomp/config/CMakeLists.txt
+++ b/src/system/libs/seiscomp/config/CMakeLists.txt
@@ -1,5 +1,21 @@
-SET(CONFIG_SOURCES log.cpp config.cpp symboltable.cpp strings.cpp)
-SET(CONFIG_HEADERS log.h config.h config.ipp symboltable.h exceptions.h)
+SET(
+	CONFIG_SOURCES
+	log.cpp
+	config.cpp
+	symboltable.cpp
+	strings.cpp
+	../../3rd-party/fmt/src/format.cc
+	../../3rd-party/fmt/src/os.cc
+)
+
+SET(
+	CONFIG_HEADERS
+	log.h
+	config.h
+	config.ipp
+	symboltable.h
+	exceptions.h
+)
 
 SC_ADD_LIBRARY(CONFIG config)
 SC_LIB_INSTALL_HEADERS(CONFIG)
