--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,13 +5,15 @@ IF (NOT SC_SYSTEM_OWN_MSEED)
 	FIND_PACKAGE(MSEED REQUIRED)
 	SET(LIBMSEED_INCLUDE_DIR ${MSEED_INCLUDE_DIR})
 	SET(LIBMSEED_LIBRARY ${MSEED_LIBRARY})
-ELSE (NOT SC_SYSTEM_OWN_MSEED)
+ELSE ()
 	SET(LIBMSEED_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/system/libs/3rd-party/libmseed CACHE INTERNAL "")
 	SET(LIBMSEED_LIBRARY mseed CACHE INTERNAL "")
 	MARK_AS_ADVANCED(MSEED_INCLUDE_DIR MSEED_LIBRARY)
 	SET(MSEED_FOUND "YES" CACHE INTERNAL "")
 	MARK_AS_ADVANCED(MSEED_FOUND)
-ENDIF (NOT SC_SYSTEM_OWN_MSEED)
+ENDIF ()
+
+INCLUDE_DIRECTORIES(system/libs/3rd-party/fmt/include)
 
 SET(SC_SYSTEM_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/system/libs)
 
