[seiscomp] Add printing internal variables

--- a/src/system/apps/seiscomp/CMakeLists.txt
+++ b/src/system/apps/seiscomp/CMakeLists.txt
@@ -22,3 +22,6 @@ INSTALL(DIRECTORY share/shell-completion DESTINATION ${SC3_PACKAGE_SHARE_DIR}
         PATTERN ".svn" EXCLUDE
         PATTERN "CMakeLists.txt" EXCLUDE)
 
+FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
+INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
+
