[cmake] Enable C++17 language support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,12 +133,10 @@ IF (CMAKE_COMPILER_IS_GNUCC)
 		SET(GCC_VERSION_MINOR 0)
 	ENDIF(GCC_VERSION_COMPONENTS_SIZE GREATER 1)
 
-	MESSAGE(STATUS "Found gcc version ${GCC_VERSION_MAJOR}.${GCC_VERSION_MINOR}")
+	MESSAGE(STATUS "Found GCC version ${GCC_VERSION_MAJOR}.${GCC_VERSION_MINOR}")
 
-	# Enable C++11
-	IF(NOT GCC_VERSION VERSION_LESS "4.7")
-		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-	ENDIF(NOT GCC_VERSION VERSION_LESS "4.7")
+	# Enable C++17 features
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 ENDIF (CMAKE_COMPILER_IS_GNUCC)
 
 # Set the platform specific suffix for dynamic libraries
@@ -149,10 +147,15 @@ ADD_DEFINITIONS(
 
 # Helper for Eclipse CDT
 #
-IF(CMAKE_COMPILER_IS_GNUCC)
+IF (CMAKE_COMPILER_IS_GNUCC)
 	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fmessage-length=0")
 ENDIF(CMAKE_COMPILER_IS_GNUCC)
-IF(CMAKE_COMPILER_IS_GNUCXX)
+IF (CMAKE_COMPILER_IS_GNUCXX)
+	IF (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "7.0.0")
+		MESSAGE(FATAL_ERROR "Insufficient GCC version. At least version \
+7.0.0 is required for C++17 language features.")
+	ENDIF()
+
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmessage-length=0")
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
