[cmake] Add optional Qt6 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,13 +59,24 @@ SET(PYTHON_LIBRARY_SUFFIX /python)
 SET(PYTHON_LIBRARY_PATH lib${PYTHON_LIBRARY_SUFFIX})
 
 OPTION(SC_GLOBAL_GUI "Build graphical user interfaces (requires Qt5)" ON)
-SET(SC_GLOBAL_GUI_QT5 ON)
+OPTION(SC_GLOBAL_GUI_QT5 "Build graphical user interfaces with Qt5" ON)
+OPTION(SC_GLOBAL_GUI_QT6 "Build graphical user interfaces with Qt6" OFF)
 
 IF(SC_GLOBAL_GUI)
-	IF(NOT SC_GLOBAL_GUI_QT5)
-		MESSAGE(FATAL_ERROR "Qt5 must be enabled, other versions are not supported")
+	IF((NOT SC_GLOBAL_GUI_QT5) AND (NOT SC_GLOBAL_GUI_QT6))
+		MESSAGE(FATAL_ERROR "Either Qt5 or Qt6 must be enabled, other versions are not supported")
 	ENDIF()
-	FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Core Widgets)
+	IF((SC_GLOBAL_GUI_QT5) AND (SC_GLOBAL_GUI_QT6))
+		MESSAGE(FATAL_ERROR "Qt5 and Qt6 are enabled, please decide for one of them")
+	ENDIF()
+	IF(SC_GLOBAL_GUI_QT5)
+		FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Core Widgets)
+		MESSAGE(STATUS "Use Qt5")
+	ENDIF()
+	IF(SC_GLOBAL_GUI_QT6)
+		FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core Widgets)
+		MESSAGE(STATUS "Use Qt6")
+	ENDIF()
 ENDIF()
 
 INCLUDE(AddFileDependencies)
