[python] Remove seiscomp3 compatibility layer

--- a/src/system/libs/CMakeLists.txt
+++ b/src/system/libs/CMakeLists.txt
@@ -4,4 +4,4 @@ IF (SC_GLOBAL_PYTHON_WRAPPER)
 	SUBDIRS(swig)
 ENDIF (SC_GLOBAL_PYTHON_WRAPPER)
 
-INSTALL(DIRECTORY seiscomp3 DESTINATION ${SC3_PACKAGE_INCLUDE_DIR})
+INSTALL(DIRECTORY seiscomp DESTINATION ${SC3_PACKAGE_INCLUDE_DIR})
