[libmseed] Remove lmplatform.h from installation

--- a/src/system/libs/3rd-party/libmseed/CMakeLists.txt
+++ b/src/system/libs/3rd-party/libmseed/CMakeLists.txt
@@ -31,6 +31,6 @@ IF(NOT WIN32)
 ENDIF(NOT WIN32)
 
 INSTALL(
-	FILES lmplatform.h libmseed.h
+	FILES libmseed.h
 	DESTINATION ${SC3_PACKAGE_INCLUDE_DIR}
 )
