Adjust package version and gcc minimum version check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ INCLUDE(SeisComP)
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "")
 SET(CPACK_PACKAGE_VENDOR "seiscomp-devel@gfz-potsdam.de")
 SET(CPACK_PACKAGE_VERSION_NAME  "Potsdam")
-SET(CPACK_PACKAGE_VERSION_MAJOR "4")
+SET(CPACK_PACKAGE_VERSION_MAJOR "7")
 SET(CPACK_PACKAGE_VERSION_MINOR "0")
 SET(CPACK_PACKAGE_VERSION_PATCH "0")
 #SET(CPACK_STRIP_FILES "bin/*")
@@ -148,6 +148,10 @@ IF (CMAKE_COMPILER_IS_GNUCC)
 	ENDIF(GCC_VERSION_COMPONENTS_SIZE GREATER 1)
 
 	MESSAGE(STATUS "Found GCC version ${GCC_VERSION_MAJOR}.${GCC_VERSION_MINOR}")
+
+	IF(GCC_VERSION VERSION_LESS "5.0")
+		MESSAGE(FATAL_ERROR "GCC version ${GCC_VERSION} found but at least 5.0 required as minimum. Version 9 or later is preferrable.")
+	ENDIF()
 
 	# Enable C++17 features
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
