[system] Move LICENSE file installation into system cmake project

--- a/src/system/CMakeLists.txt
+++ b/src/system/CMakeLists.txt
@@ -1,6 +1,9 @@
 SC_BEGIN_PACKAGE(SYSTEM)
 SC_ADD_CHANGELOG(seiscomp ${CMAKE_SOURCE_DIR})
 
+INSTALL(FILES ${CMAKE_SOURCE_DIR}/doc/base/license.rst RENAME LICENSE DESTINATION ${SC3_PACKAGE_SHARE_DIR}/doc/seiscomp)
+INSTALL(FILES ${CMAKE_SOURCE_DIR}/LICENSE.html DESTINATION ${SC3_PACKAGE_SHARE_DIR}/doc/seiscomp)
+
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)
 
