[cmake] Add Qt6 hint

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ FIND_PACKAGE(PythonInterp REQUIRED)
 SET(PYTHON_LIBRARY_SUFFIX /python)
 SET(PYTHON_LIBRARY_PATH lib${PYTHON_LIBRARY_SUFFIX})
 
-OPTION(SC_GLOBAL_GUI "Build graphical user interfaces (requires Qt5)" ON)
+OPTION(SC_GLOBAL_GUI "Build graphical user interfaces (requires Qt5 or Qt6)" ON)
 OPTION(SC_GLOBAL_GUI_QT5 "Build graphical user interfaces with Qt5" ON)
 OPTION(SC_GLOBAL_GUI_QT6 "Build graphical user interfaces with Qt6" OFF)
 
