[documentation] Do not install .doctree directory

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -32,7 +32,7 @@ IF (SC_DOC_GENERATE)
 	)
 
 	IF (SC_DOC_GENERATE_HTML)
-		INSTALL(DIRECTORY ${DOC_BUILD_DIR}/html DESTINATION ${SC3_PACKAGE_SHARE_DIR}/doc/seiscomp)
+		INSTALL(DIRECTORY ${DOC_BUILD_DIR}/html DESTINATION ${SC3_PACKAGE_SHARE_DIR}/doc/seiscomp PATTERN ".doctrees" EXCLUDE)
 	ENDIF()
 
 	IF (SC_DOC_GENERATE_MAN)
