[cmake] Find Boost library also in case that unittests are disabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,6 +191,7 @@ IF(SC_GLOBAL_UNITTESTS)
 	FIND_PACKAGE(Boost REQUIRED COMPONENTS unit_test_framework)
 	ENABLE_TESTING()
 ELSE(SC_GLOBAL_UNITTESTS)
+	FIND_PACKAGE(Boost)
 	MESSAGE(STATUS "Disable unit tests")
 ENDIF(SC_GLOBAL_UNITTESTS)
 
